Padrao Observer implementado para teste funcional com dados vindos do servidor